2009-08-04  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomMethod.cs: Fixed constructor xml
	  documentation from monodoc source.

2009-08-03  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/IMember.cs:
	* MonoDevelop.Projects.Dom/DomMethod.cs:
	* MonoDevelop.Projects.Dom/CopyDomVisitor.cs:
	* MonoDevelop.Projects.Dom/DomMemberDecorator.cs:
	* MonoDevelop.Projects.Dom/DomCecilCompilationUnit.cs:
	* MonoDevelop.Projects.Dom.Serialization/AssemblyCodeCompletionDatabase.cs:
	  Load xml documentation for referenced assemblies (doc need
	  to have the same full path with ".xml" extension instead of
	  ".dll")

2009-08-03  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom.Output/AmbienceService.cs: fixed
	  bug in GetDocumentation method.

2009-08-01  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomType.cs:
	* MonoDevelop.Projects.Dom/IReturnType.cs:
	* MonoDevelop.Projects.Dom/CopyDomVisitor.cs:
	* MonoDevelop.Projects.Dom/DomCecilCompilationUnit.cs: Fixed
	  "Bug 527337 - Wrong return type in code competion (should be
	  array of string instead of string)".

2009-07-31  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Dom.Serialization/ProjectCodeCompletionDatabase.cs:
	  Resolve corlib name for the current runtime version. Fixes
	  errors with Moonlight and iPhone addins.

2009-07-31  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects/ProjectReference.cs: Don't try to
	  resolve assemblies before project (and hence target
	  framework) is set.

2009-07-31  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/SolutionFolder.cs: When reloading an
	  item, make sure parent add/remove events are sent tot he
	  parent solution.

2009-07-31  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProject.cs:
	  Preserve empty lines at the end of the file.

2009-07-31  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am: