@@ -1,3 +1,11 @@
+2009-08-04  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* MonoDevelop.Projects/SolutionFolder.cs:
+	* MonoDevelop.Projects/SolutionItemEventArgs.cs: When firing
+	  the ItemRemoved event, provide the parent solution in the
+	  args (the ParentSolution property of the item is already
+	  reset at this stage).
+
 2009-08-04  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.Projects.Dom/DomMethod.cs: Fixed constructor xml
